; ModuleID = '/home/carl/AnghaBench/systemd/src/network/netdev/extr_bridge.c_config_parse_bridge_igmp_version.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/netdev/extr_bridge.c_config_parse_bridge_igmp_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [85 x i8] c"Failed to parse bridge's multicast IGMP version number '%s', ignoring assignment: %m\00", align 1
@.str.1 = private unnamed_addr constant [74 x i8] c"Invalid bridge's multicast IGMP version number '%s', ignoring assignment.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_parse_bridge_igmp_version(i8* %0, i8* %1, i32 %2, i8* %3, i32 %4, i8* %5, i32 %6, i8* %7, i8* %8, i8* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i8*, align 8
  %22 = alloca %struct.TYPE_2__*, align 8
  %23 = alloca i64, align 8
  %24 = alloca i32, align 4
  store i8* %0, i8** %12, align 8
  store i8* %1, i8** %13, align 8
  store i32 %2, i32* %14, align 4
  store i8* %3, i8** %15, align 8
  store i32 %4, i32* %16, align 4
  store i8* %5, i8** %17, align 8
  store i32 %6, i32* %18, align 4
  store i8* %7, i8** %19, align 8
  store i8* %8, i8** %20, align 8
  store i8* %9, i8** %21, align 8
  %25 = load i8*, i8** %21, align 8
  %26 = bitcast i8* %25 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %26, %struct.TYPE_2__** %22, align 8
  %27 = load i8*, i8** %13, align 8
  %28 = call i32 @assert(i8* %27)
  %29 = load i8*, i8** %17, align 8
  %30 = call i32 @assert(i8* %29)
  %31 = load i8*, i8** %19, align 8
  %32 = call i32 @assert(i8* %31)
  %33 = load i8*, i8** %20, align 8
  %34 = call i32 @assert(i8* %33)
  %35 = load i8*, i8** %19, align 8
  %36 = call i64 @isempty(i8* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %10
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  store i64 0, i64* %40, align 8
  store i32 0, i32* %11, align 4
  br label %69

41:                                               ; preds = %10
  %42 = load i8*, i8** %19, align 8
  %43 = call i32 @safe_atou8(i8* %42, i64* %23)
  store i32 %43, i32* %24, align 4
  %44 = load i32, i32* %24, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %54

46:                                               ; preds = %41
  %47 = load i8*, i8** %12, align 8
  %48 = load i32, i32* @LOG_ERR, align 4
  %49 = load i8*, i8** %13, align 8
  %50 = load i32, i32* %14, align 4
  %51 = load i32, i32* %24, align 4
  %52 = load i8*, i8** %19, align 8
  %53 = call i32 @log_syntax(i8* %47, i32 %48, i8* %49, i32 %50, i32 %51, i8* getelementptr inbounds ([85 x i8], [85 x i8]* @.str, i64 0, i64 0), i8* %52)
  store i32 0, i32* %11, align 4
  br label %69

54:                                               ; preds = %41
  %55 = load i64, i64* %23, align 8
  %56 = call i32 @IN_SET(i64 %55, i32 2, i32 3)
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %65, label %58

58:                                               ; preds = %54
  %59 = load i8*, i8** %12, align 8
  %60 = load i32, i32* @LOG_ERR, align 4
  %61 = load i8*, i8** %13, align 8
  %62 = load i32, i32* %14, align 4
  %63 = load i8*, i8** %19, align 8
  %64 = call i32 @log_syntax(i8* %59, i32 %60, i8* %61, i32 %62, i32 0, i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str.1, i64 0, i64 0), i8* %63)
  store i32 0, i32* %11, align 4
  br label %69

65:                                               ; preds = %54
  %66 = load i64, i64* %23, align 8
  %67 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %68 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %67, i32 0, i32 0
  store i64 %66, i64* %68, align 8
  store i32 0, i32* %11, align 4
  br label %69

69:                                               ; preds = %65, %58, %46, %38
  %70 = load i32, i32* %11, align 4
  ret i32 %70
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @isempty(i8*) #1

declare dso_local i32 @safe_atou8(i8*, i64*) #1

declare dso_local i32 @log_syntax(i8*, i32, i8*, i32, i32, i8*, i8*) #1

declare dso_local i32 @IN_SET(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
